WOLO-171mapper class